Output/slurm-735888.out
  File "/gpfs/mariana/home/akkusu/TBT-practice/TBT_for_VGG.py", line 67
    self.N_bits = 7
    ^
IndentationError: expected an indented block after function definition on line 66
